Make the about:blank documents created by CreateAboutBlankContentViewer havethe same encoding as real about:blank documents (that is, UTF-8).  Bug 380383,r+sr=jst